--- a/container/0c6c752060cf42bd05f6e5d3eb42e6beebe8825f7b02a641e8480a1cac187906/style.css
+++ b/container/0c6c752060cf42bd05f6e5d3eb42e6beebe8825f7b02a641e8480a1cac187906/style.css
@@ -1,53 +1,53 @@
-body{
-	background:#000;
+body {
+  background: #000;
 }
-.brainContainer{
-    width:50vw;
-    height:50vw;
-    max-height:400px;
-    max-width:400px;
-    position:absolute;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
-    overflow:hidden;
-    cursor:pointer;
-    z-index:-1;
+.brainContainer {
+  width: 50vw;
+  height: 50vw;
+  max-height: 400px;
+  max-width: 400px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  cursor: pointer;
+  z-index: -1;
 }
-svg{
-    height:100%;
-    width:100%;
-    position:absolute;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
+svg {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
-path{
-	fill:transparent;
+path {
+  fill: transparent;
 }
-.brainPath{
-	stroke:#00ff00;
-	stroke-width:1;
+.brainPath {
+  stroke: #00ff00;
+  stroke-width: 1;
 }
-.brainCircle{
-	stroke:#00FF00;
-	fill:#00FF00;
+.brainCircle {
+  stroke: #00ff00;
+  fill: #00ff00;
 }
-.brainRect{
-	stroke:#00FF00;
-	fill:#00FF00;
+.brainRect {
+  stroke: #00ff00;
+  fill: #00ff00;
 }
-.brainEllipse{
-	stroke:#00FF00;
-	fill:#00FF00;
+.brainEllipse {
+  stroke: #00ff00;
+  fill: #00ff00;
 }
-.animatePaths{
+.animatePaths {
   animation: goPath 3000ms alternate infinite;
 }
-.animateCircles{
+.animateCircles {
   animation: goCircle 3000ms alternate infinite;
 }
-.animateRects{
+.animateRects {
   animation: goRect 3000ms alternate infinite;
 }
 @keyframes goPath {
@@ -57,17 +57,17 @@ path{
 }
 @keyframes goRect {
   to {
-    opacity:0;
+    opacity: 0;
   }
 }
 @keyframes goCircle {
   0% {
-		opacity:0;
+    opacity: 0;
   }
   50% {
-		opacity:1;
+    opacity: 1;
   }
   100% {
-		opacity:0;
+    opacity: 0;
   }
 }
