--- a/container/fafd4cb0a94dc1779720e1001f6d103053f342e77c834492393b3e49dc3737e4/style.css
+++ b/container/fafd4cb0a94dc1779720e1001f6d103053f342e77c834492393b3e49dc3737e4/style.css
@@ -1,23 +1,24 @@
-html, body {
-  margin:0;
-  padding:0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 form div {
-  display:flex;
-  flex-wrap:wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 form p {
-  margin:1em;
-  padding:1em;
+  margin: 1em;
+  padding: 1em;
 }
 
 form label {
-  color:#999;
-  font-family:sans-serif;
+  color: #999;
+  font-family: sans-serif;
 }
 
 fieldset {
-  margin:2em;
+  margin: 2em;
 }
